--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vehicle Service Marketplace Platform</title>
+    <link rel="preconnect" href="https://0ec90b57d6e95fcbda19832f.supabase.co" />
+    <link rel="dns-prefetch" href="https://0ec90b57d6e95fcbda19832f.supabase.co" />
+    <title>AutoServe - Vehicle Service Marketplace</title>
+    <meta name="description" content="Find auto parts, book mechanics, and get your vehicle serviced all in one place" />
   </head>
   <body>
     <div id="root"></div>
